src/component/SearchOverlay/SearchOverlay.style.scss
:root {
    --cart-overlay-totals-background: var(--secondary-base-color);
    --cart-overlay-divider-background: #d8d8d8;
    --cart-overlay-promo-background: #ffffff;
    --cart-overlay-width: 400px;

    --White: #ffffff;
    --Black: #000000;
    --BlackOpacityOf6: #00000099;
    --BlackOpacityOf1: #0000001a;
    --Tundora: #4a4a4a;
    --Iron: #d1d3d4;
    --DustyGray: #9b9b9b;
}

.RecentSearches {
    margin-bottom: 21px;
    font: var(--unnamed-font-style-normal) normal bold 14px/19px var(--unnamed-font-family-avenir-next);
    color: var(--unnamed-color-000000);
    text-align: left;
    font: normal normal bold 14px/19px Avenir Next;
    letter-spacing: 1.56px;
    color: #000000;
    text-transform: uppercase;
    opacity: 1;
    ul {
        &::before {
            display: none;
        }

        display: flex;
    }

    a {
        text-decoration: none;
    }

    li {
        &::before {
            display: none;
        }

        margin-top: 0;
        margin-right: 14px;

        @include mobile {
            margin-right: 8px;
        }

        @include tablet {
            margin-right: 8px;
        }
    }

    h2 {
        font-family: "AvenirNext-DemiBold";
        font-size : 14px;
        color : #000000;
        text-transform: uppercase;
        text-align: initial;
    }

    @include before-desktop() {
        ul {
            overflow-x: auto;
        }
    }

    @include desktop() {
        ul {
            flex-wrap: wrap;
        }
    }
}

.RecentSearches {

    &-searchList {
        li {
            padding-left: 0px !important;
        }

        &_isArabic {
            li {
                &:first-of-type {
                    margin-right: 0 !important;
                }
            }
        }
    }
}

.SearchOverlay {
    text-transform: initial;

    @include desktop {
        width: 385px;
        height: auto !important;
    }

    @include after-mobile {
        position: absolute;
        right: -150px;
        padding: 0;
        width: var(--cart-overlay-width);

        &_isArabic {
            right: unset;
            left: -150px;
        }
    }


    &-Wrapper {
        .Image {
            &-Image {
                object-fit: cover;
            }
        }
    }


    &::before {

        @include after-mobile {
            content: "";
            position: absolute;
            list-style-type: none !important;
            height: 1px;
            width: 70px;
            z-index: 900;
            margin-left: auto;
            margin-right: auto;
            left: 2px;
            right: 0;
            text-align: center;
            background-color: #4a4a4a;
        }
    }

    &_isArabic {
        &::before {
            @include after-mobile {
                left: -50px;
            }
        }
    }

    &_isPopup {
        opacity: 0;
        overflow: hidden;
    }

    &-ItemCount {
        color: #000000;
        font-family: "Avenir Next";
        font-size: 18px;
        font-weight: var(--fw-medium);
        line-height: 20px;
        padding: 10px 20px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: left;

        div {
            font-size: 12px;
            font-weight: var(--fw-demi);

            div {
                font-weight: var(--fw-light);
            }
        }

        span:last-of-type {
            @include close-button;
            --header-color: #ffffff;
        }

        .moreDataLink {
            text-align: left;
            text-decoration: underline;
            font-size: 12px;
            font-weight: bold;
            position: left;
        }
    }

    &-ItemCount,
    &-Empty {
        font-weight: var(--fw-regular);
    }

    &_isVisible {
        @include after-mobile {}
    }

    &-Items {
        padding-bottom: 20px;
        max-height: calc(60vh - 150px);
        overflow-y: auto;
        overflow-x: hidden;

        &::-webkit-scrollbar {
            width: 4px;
            border: 1px solid #d5d5d5;
        }

        &::-webkit-scrollbar-thumb {
            background: #585757;
            border-radius: 5px;
        }

        &::-webkit-scrollbar-track {
            background: #dcdcdc;
        }

        .CartItem {
            &-Content {
                height: auto;
            }

            .Image-Image {
                object-fit: cover;
            }
        }
    }

    &-Empty {
        font-size: 15px;
        font-weight: var(--fw-light);
        text-align: center;
        letter-spacing: 0.75px;
        padding: 20px 0;
    }
}

.Overlay {

    &_isInstant {
        pointer-events: all;
        touch-action: pan-y;
        opacity: 1;
        z-index: 99;

        @include desktop {
            height: auto;
        }
    }
}

div.SearchOverlay.Overlay {
    width: 573px;
    height: auto;
    opacity: 1;
    border-radius: 12px;
    background-color: #ffffff;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
}
/* ... */

